--- a/about.html
+++ b/about.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Esta es la página de about</h1>
     <p>Que sigue siendo chachi</p>
+    <p>Soy una marmota, una marmota revelde jejeje</p>
+   
 </body>
 
 </html>
